@@ -558,9 +558,7 @@ int get_output_value (const char *name);
 void set_indent (void);
 void show_stat (void);
 void show_locale (void);
-void get_major_minor (const char *path,
-		unsigned int *_major,
-		unsigned int *_minor);
+int get_major_minor (const char *path, unsigned int *_major, unsigned int *_minor);
 bool uid_match (uid_t uid);
 char * get_path (const char *argv0);
 bool is_big_endian (void);
