@@ -1,3 +1,12 @@
+2013-08-30  James Hunt  <james.hunt@ubuntu.com>
+
+	* src/procenv.c:
+	  - show_stat(): Make resilient to failures.
+	  - show_linux_mounts(): Show if unable to query major+minor number.
+	  - show_bsd_mounts(): Show if unable to query major+minor number.
+	  - get_major_minor(): Return a value rather than simply warning on
+	    error.
+
 2013-08-28  James Hunt  <james.hunt@ubuntu.com>
 
 	* src/procenv.c:
